--- a/iotum-samples/src/pages/Navigation/Navigation.css
+++ b/iotum-samples/src/pages/Navigation/Navigation.css
@@ -6,8 +6,9 @@
 }
 
 .nav-button {
+    width: 100%; 
+    text-align: center;
     font-size: 20px; 
-    width: auto; 
     font-weight: bold;
     margin: 5px 0; /* Adds some space between the buttons */
     display: inline-block;
@@ -15,18 +16,23 @@
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
-    background-color: #F6A978; 
+    background-color: #3498db; 
     color: white;
     cursor: pointer;
     transition: background-color 0.3s;
     border-radius: 5px;  /* Adds rounded corners */
-    display: block;         /* Places each button on a new line */
+    display: block; /* Places each button on a new line */
     text-align: center;
     line-height: 1.5;
 }
 
+a {
+    text-decoration: none;  /* Removes the underline for all anchor links */
+}
+
+
 .nav-button:hover {
-    background-color: #E0976A; /* darken color on hover */
+    background-color: #2980b9; /* darken color on hover */
 }
 
 ul {
