--- a/iotum-samples/src/pages/navigation-page/NavigationPage.css
+++ b/iotum-samples/src/pages/navigation-page/NavigationPage.css
@@ -6,30 +6,25 @@
 }
 
 .nav-button {
-    width: 100%; 
+    width: auto;
     text-align: center;
     font-size: 20px; 
     font-weight: bold;
-    margin: 5px 0; /* Adds some space between the buttons */
-    display: inline-block;
-    margin: 50px 0;
+    margin: 55px 0; /* Combining both margin properties you had */
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
-    background-color: #3498db; 
+    background-color: #3498db;
     color: white;
     cursor: pointer;
     transition: background-color 0.3s;
-    border-radius: 5px;  /* Adds rounded corners */
-    display: block; /* Places each button on a new line */
-    text-align: center;
+    display: block;
     line-height: 1.5;
 }
 
 a {
-    text-decoration: none;  /* Removes the underline for all anchor links */
+    text-decoration: none; /* Removes the underline for all anchor links */
 }
-
 
 .nav-button:hover {
     background-color: #2980b9; /* darken color on hover */
@@ -38,4 +33,4 @@ a {
 ul {
     list-style-type: none;
     padding: 0;
-  }
+}
