--- a/src/components/MenuButton.module.css
+++ b/src/components/MenuButton.module.css
@@ -8,8 +8,9 @@
     font-weight: bold;
     border-radius: 4px;
     position: absolute; /* absolute positioning */
-    top: 20px;
+    top: 80px;
     z-index: 10; /* Ensure it's above other elements */
+    width: 120px;
   }
   
   .menuButton:hover {
