--- a/src/components/TokenButton.module.css
+++ b/src/components/TokenButton.module.css
@@ -8,8 +8,9 @@
     font-weight: bold;
     border-radius: 4px;
     position: absolute; /* absolute positioning */
-    top: 20px;
+    top: 30px;
     z-index: 10; /* Ensure it's above other elements */
+    width: 120px;
   }
   
   .tokenButton:hover {
