--- a/src/navigation/Navigation.css
+++ b/src/navigation/Navigation.css
@@ -14,7 +14,7 @@
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
-    background-color: #3498db;
+    background-color: #007bff;
     color: white;
     cursor: pointer;
     transition: background-color 0.3s;
@@ -22,12 +22,8 @@
     line-height: 1.5;
 }
 
-a {
-    text-decoration: none; /* Removes the underline for all anchor links */
-}
-
 .nav-button:hover {
-    background-color: #2980b9; /* darken color on hover */
+    background-color: #0056b3; /* darken color on hover */
 }
 
 ul {
