--- a/src/navigation/MenuButton/MenuButton.module.css
+++ b/src/navigation/MenuButton/MenuButton.module.css
@@ -8,7 +8,7 @@
     font-weight: bold;
     border-radius: 4px;
     position: absolute; /* absolute positioning */
-    top: 80px;
+    top: 80px; /*Lower than the Token Button */
     z-index: 10; /* Ensure it's above other elements */
     width: 120px;
   }
