--- a/src/pages/menu-page/MenuPage.css
+++ b/src/pages/menu-page/MenuPage.css
@@ -1,8 +1,8 @@
 .menu-container {
-    display: flex;
+    position: flex;
     flex-direction: column;
     align-items: center;
-    color: rgb(88, 87, 87)
+    color: rgb(1, 1, 1);
   }
   
   h1 {
